adding GET template api
